<resources>
    <string name="app_name">Holler Demo</string>
    <string name="username">Username (Email Address)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_tip">Input your HOLLER\'s Dashboard \n Username and Password</string>
    <string name="login_intro">Hello and \n welcome to the \n Holler Demo App</string>
    <string name="error_email_empty">Email must not be blank</string>
    <string name="error_password_empty">Password must not be blank</string>
    <string name="error_email">Email address mismatch email standard format</string>
    <string name="error_cellphone_empty">Cellphone Number must not be blank</string>
    <string name="error_cellphone_6">Cellphone number must have at least 6 numbers</string>
    <string name="error_cellphone_12">Cellphone number must have equals or less than 12
numbers</string>
    <string name="error_fullname">Full name must not contain special characters and number</string>
    <string name="error_fullname_less_than_two_words">Full Name must have at least first name and surname</string>
    <string name="error_fullname_empty">Full Name must not be blank</string>
    <string name="error_general">Something went wrong.</string>
    <string name="error_date_of_birth_empty">Birthday must not be blank</string>
    <string name="error_password">Password must have at least 6 characters</string>
    <string name="error_login">Can\'t login with provided credentials. Please check your email and password</string>
    <string name="subscriber_intro">Register as a subscriber \n to HOLLER Demo App to \n receive push \n notifications</string>
    <string name="subscriber_line_2">These information will be used</string>
    <string name="fullname">Full name</string>
    <string name="birth_day">Birthday</string>
    <string name="mobile_label">Mobile number (start with country code +65, etc)</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="subscribe_to_holler">Subscribe to holler</string>
    <string name="country">Country</string>
    <string name="update_information">Update Information</string>
    <string name="registration_successful">Registration \n successful. You can \n now start receiving \n communications.</string>
    <string name="registration_successful_line2">Please don\'t forget that you can add
your friends and colleague to your demo app subscribers list by asking them to install the demo app and sign up using your demo API key</string>

    <string name="notification_title">Congratulations you\n have just received\n your first push\n notification</string>
    <string name="notification_body">This is an example of the page that can\n be launched when user click on the push\n notification</string>

</resources>
