<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="handler"
            type="com.rainmakerlabs.holler.demo.NotificationActivity" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:apps="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:id="@+id/tv_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:alpha="0.8"
                android:gravity="center"
                android:text="@string/notification_body"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="17sp"
                android:textColor="@android:color/white" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_above="@id/tv_bottom"
                >

                <ImageView
                    android:id="@+id/image_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:alpha="0.3"
                    android:scaleType="fitXY"
                    android:src="@drawable/bg_ring_6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_logo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_holler" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:gravity="center"
                        android:text="@string/notification_title"
                        android:textColor="@android:color/white"
                        android:textSize="34sp" />


                </LinearLayout>
            </FrameLayout>




            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/padding_xxx"
                android:background="@drawable/btn_pink"
                android:onClick="@{(view) -> handler.onUpdateClick(view)}"
                android:text="@string/update_information"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:visibility="gone" />
        </RelativeLayout>
    </FrameLayout>

</layout>